Fix widths and spacing for modals with form (#232)
* Fix widths and spacing for modals with form

* Remove unused var

* update webdrive

--- a/src/app/shared/modals/add-edit-base-modal/add-edit-base-modal.component.scss
+++ b/src/app/shared/modals/add-edit-base-modal/add-edit-base-modal.component.scss
@@ -1,12 +1,24 @@
-.mat-dialog-title {
-  padding-top: 35px;
+@use '/src/variables.scss' as *;
 
-  > h2 {
+.mat-dialog-title {
+  padding: 48px 32px 24px 64px;
+
+  > h1 {
     margin: 0;
   }
 
   .button-dialog-close {
-    top: 0;
-    right: 0;
+    top: 2px;
+    right: 2px;
+  }
+}
+
+.mat-dialog-content {
+  padding: 14px 16px;
+}
+
+@media (min-width: map-get($grid-breakpoints, md)) {
+  .mat-dialog-content {
+    padding: 14px 24px;
   }
 }
